flicker issue fix and css move close box

--- a/firecares/firestation/static/firestation/theme/assets/css/style.css
+++ b/firecares/firestation/static/firestation/theme/assets/css/style.css
@@ -12161,8 +12161,9 @@ div.is-your-department {
   min-width: 250px;
 }
 .alert button.close {
-  margin: 0.45rem 1rem;
+  margin: -0.25rem 1rem;
   opacity: 0.75;
+  padding-bottom: 20px;
 }
 .alert button.close:hover {
   opacity: 1;
