--- a/firecares/firestation/static/firestation/theme/assets/less/firecares.less
+++ b/firecares/firestation/static/firestation/theme/assets/less/firecares.less
@@ -1509,8 +1509,9 @@ div.is-your-department {
 }
 
 .alert button.close {
-  margin: 0.45rem 1rem;
+  margin: -0.25rem 1rem;
   opacity: 0.75;
+  padding-bottom: 20px;
 
   &:hover {
     opacity: 1;
